--- a/build.gradle
+++ b/build.gradle
@@ -12,34 +12,35 @@ repositories {
 }
 
 dependencies {
-    // Spring Framework
     implementation 'org.springframework:spring-context:5.3.9'
     implementation 'org.springframework:spring-core:5.3.9'
     implementation 'org.springframework:spring-webmvc:5.3.9'
     implementation 'org.springframework:spring-web:5.3.9'
     implementation 'org.springframework:spring-jdbc:5.3.9'
 
-    // PostgreSQL JDBC driver
     implementation 'org.postgresql:postgresql:42.2.23'
 
-    // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
-    // Mapstruct
-    implementation 'org.mapstruct:mapstruct:1.5.0.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.0.Final'
-
-    // Servlet API
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
-
-    // JUnit and Mockito for testing
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
-    testImplementation 'org.mockito:mockito-core:3.11.2'
 
     implementation 'org.flywaydb:flyway-core:9.4.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
+
+    implementation 'org.hibernate:hibernate-core-jakarta:5.6.10.Final'
+
+    testImplementation 'org.springframework:spring-test:5.3.9'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.11.2'
+    testImplementation 'org.testcontainers:postgresql:1.15.1'
+    testImplementation 'org.testcontainers:junit-jupiter:1.15.1'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 flyway {
